tests/ui/range/range_traits-6.rs
use std::ops::*;

#[derive(Copy, Clone)] //~ ERROR Copy
struct R(RangeInclusive<usize>);

fn main() {}
